# Open-Structure

./: README.md
baseline/: CMakeLists.txt  readme.md
baseline/config/: config_openstructure_baseline.yaml  config_openstructure_iclnuim.yaml  config_openstructure_tartan.yaml  config_openstructure_tumrgbd.yaml  venom_config_euroc.yaml  venom_config_iclnuim.yaml  venom_config_simulsation.yaml
baseline/dataset/public/v1/: paraline.txt  v101_pose_gt.txt  v102_pose_gt.txt  v103_pose_gt.txt
baseline/dataset/public/v2/: paraline.txt  point.txt  v201_pose_gt.txt  v202_pose_gt.txt  v203_pose_gt.txt
baseline/docker/: Dockerfile  readme.md
baseline/evaluation/paper_Sphere/: PointLine_BA.txt  PointLine_mapline.txt  PointLine_mappoint.txt  PointParaline_BA.txt  PointParaline_BA_no_single.txt  PointParaline_JFG_BA.txt  PointParaline_JFG_BA_0.05.txt  PointParaline_JFG_Mapline.txt  PointParaline_JFG_Mappoint.txt  PointParaline_Mapline.txt  PointParaline_Mappoint.txt  Point_BA.txt  Point_Mappoint.txt  estimated_vo.txt  ground_pose.txt  system_parameter.txt  venom_sequence.txt
baseline/evaluation/paper_box/: PointLine_BA.txt  PointLine_mapline.txt  PointLine_mappoint.txt  PointParaline_BA.txt  PointParaline_BA_single.txt  PointParaline_JFG_BA.txt  PointParaline_JFG_Mapline.txt  PointParaline_JFG_Mappoint.txt  PointParaline_Mapline.txt  PointParaline_Mappoint.txt  Point_BA.txt  Point_Mappoint.txt  estimated_localmap.txt  ground_truth.txt  system_parameter.txt  venom_sequence.txt
baseline/evaluation/paper_corridor/: PointLine_BA.txt  PointLine_mapline.txt  PointLine_mappoint.txt  PointParaline_BA.txt  PointParaline_JFG_BA.txt  PointParaline_JFG_BA_0.01.txt  PointParaline_JFG_Mapline.txt  PointParaline_JFG_Mappoint.txt  PointParaline_Mapline.txt  PointParaline_Mappoint.txt  Point_BA.txt  Point_Mappoint.txt  estimated_localmap.txt  system_parameter.txt  venom_sequence.txt
baseline/examples/: main_entrance.cc  test_draw_cooridor_trajectory.cc  test_draw_corridor.cc  test_draw_corridor_envpoint.cc  test_draw_corrifor_envpointline.cc  test_draw_objects_envpointline.cc  test_draw_room_envpointline.cc  test_line_rect_intersection.cc
baseline/src/estimator/: Track.hpp
baseline/src/gui/: Interface.hpp
baseline/src/manager_env/: EnvFrame.hpp  EnvLine.hpp  EnvManager.hpp  EnvPoint.hpp  EnvTrajectory.hpp
baseline/src/map/: MapLine.hpp  MapPoint.hpp  MapVenom.hpp
baseline/src/optimizer/: CovisExtensPointParalineBA.hpp  CovisPointBA.hpp  CovisPointLineBA.hpp  CovisPointParaLineBA2.hpp  CovisPointParalineBA.hpp  PoseGraphOptimization.hpp
baseline/src/optimizer/factor/: LineProjectionFactor.cc  LineProjectionFactor.hpp  PoseGraphSE3Factor.hpp  PoseGraphSO3Factor.cc  PoseGraphSO3Factor.hpp
baseline/src/optimizer/parametrization/: line_parameterization.cc  line_parameterization.hpp  pose_local_parameterization.cc  pose_local_parameterization.hpp
baseline/src/utils/: IOFuntion.hpp  UtilEnvElement.hpp  UtilStruct.hpp  UtilTransformer.hpp
dataset/: readme.md
dataset/icl_lrvt0/ground_truth/: associations.txt
dataset/icl_lrvt0/input/: camera_poses.txt  line_landmarks.txt  point_landmarks.txt
dataset/publish_dataset/icl-nuim/lrkt0/: camera_poses.txt  line_landmarks.txt  point_landmarks.txt
evaluation_tools/: readme.md  sparse_reconstruction_error.py
generation_tools/examples/V101/: 3DMap.txt  3DMap_registered.txt  CameraTrajectory.txt
(+89 files in other folders)
